ciLOlVsj: FIX - Adjust amount wrapper on IPhone X

--- a/src/sass/views/walletDetails.scss
+++ b/src/sass/views/walletDetails.scss
@@ -144,6 +144,7 @@
   .amount-wrapper {
     position: relative;
     overflow: visible;
+    margin-top: env(safe-area-inset-top);
 
     .amount-bg {
       content: '';
